<resources>
    <string name="app_name">Time Management App</string>
    <string name="stopwatch">Stopwatch</string>
    <string name="home">Home</string>
    <string name="report">Report</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="reset">Reset</string>
    <string name="homepageWelcome">Welcome to Time Management App</string>
    <string name="enterName">Your Name</string>
    <string name="enterPassword">Your Password</string>
    <string name="to_do">To Do</string>
    <string name="habit_tracker">Habit Tracker</string>
    <string name="exercise">Exercise</string>
    <string name="get_started">Get Started</string>
    <string name="welcomeTextStartingPage">Hi Welcome to our Mobile App, We will help you in managing all your day to day activities</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="search">Search</string>
    <string name="startTime">00:00:00</string>
    <string name="signup">Signup</string>
    <string name="add_your_tasks">Add your tasks</string>
    <string name="task_description">Task Description</string>
    <string name="task_subject">Task Subject</string>
    <string name="enter_time">Enter Time</string>
    <string name="task_priority">Task Priority</string>
    <string name="add_task">Add Task</string>
    <string name="save">Save</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="ss">start</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="update">Update</string>
    <string name="lap">Lap</string>
    <string name="welcome_back">Welcome Back !!</string>
    <string name="task">Task</string>
    <string name="habit">Habit</string>
    <string name="add_a_new_task">Add a New Task</string>
    <string name="set_alarm">Set alarm</string>
    <string name="your_time">Your Time Report</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="tasks">Tasks</string>
    <string name="pages">Pages</string>

    <string-array name="settingsMultiListTime">
        <item>1</item>
        <item>2</item>
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>30</item>
    </string-array>
</resources>